update 23.04.25.2 - fix unittest